--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -11,8 +11,8 @@ html,body {
     display: grid;
     grid-template-areas: 
     "header header"
-    "intro publicidad"
-    "info publicidad"
+    "intro intro"
+    "info info"
     "footer footer"
     ;
     grid-template-columns: auto 250px;
@@ -23,6 +23,9 @@ html,body {
     height: 100vh;
 }
 
+#titulo {
+    color: #fff;
+}
 
 div#img {
     display: flex;
@@ -131,15 +134,36 @@ section.intro {
 section.info {
     grid-area: info;
 }
-aside {
-    grid-area: publicidad;
-    background-color: #34495E;
+
+
+#titulo-servicio {
+    display: inline-block;
+    font-size: 80px;
+    align-items: center;
+    text-align: center;
+    margin-left: 240px;
+    margin-top: 120px;
+    margin-bottom: 5px;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    -webkit-box-shadow: inset -1px 3px 8px 5px #1F87FF, 2px 5px 16px 0px #0B325E, 5px 5px 15px 5px rgba(0,0,0,0); 
+box-shadow: inset -1px 3px 8px 5px #1F87FF, 2px 5px 16px 0px #0B325E, 5px 5px 15px 5px rgba(0,0,0,0);
 }
-ul.flexbox {
-    display: flex;
-    flex-direction: row;
+#copete-servicio {
+    font-size: 18px;
+    text-align: center;
+    margin-left: 240px;
+    margin-bottom: 100px;
 }
-.video2 {
+#color-contacto {
+    color: #fff;
+}
+
+.maquetado {
     display: flex;
-    flex-direction: row;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: flex-start;
+    height: 45px;
+    margin-right: 350px;
 }
