--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,169 +1,87 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-html,body {
-    width: 100%;
-    height: 100vh;
-}
-
-.grid {
-    display: grid;
-    grid-template-areas: 
-    "header header"
-    "intro intro"
-    "info info"
-    "footer footer"
-    ;
-    grid-template-columns: auto 250px;
-    grid-template-rows: 90px 1fr 1fr 70px;
-    grid-row-gap: 10px;
-    grid-column-gap: 15px;
-    width: 100%;
-    height: 100vh;
-}
-
-#titulo {
-    color: #fff;
-}
-
-div#img {
-    display: flex;
-    margin-left: 680px;
-    margin-bottom: -250px;
-}
-
-body {
-    background-color: #5D6D7E;
-}
-
 header {
-    grid-area: header;
-    background-color: #34495E ;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    margin-bottom: 80px;
+    background-color: aqua;
 }
-
-header h1 {
+body {
+    background-color: #2E4053;
+}
+header {
+    background-color: #1B2631;
+}
+h1 {
+    display: inline;
     color: #fff;
-    font-size: 28px;
-    font-family: sans-serif;
-    margin-left: 120px;
+    padding: 80px;
 }
-
-header nav {
-    margin-right: 120px;
+ul {
+    display: inline-block;
 }
-
-header nav ul li {
+li {
     display: inline-block;
     list-style-type: none;
-    margin: 0 15px;
-    color: #fff;
-    text-decoration: none;
-}
-
-header nav ul li a {
-    font-size: 22px;
-    color: #fff;
-    text-decoration: none;
-}
-
-
-section {
-    color: #fff;
-}
-
-.margin {
-    width: 600px;
-    margin-top: 200px;
+    margin: 0 20px;
 }
 
 h2 {
+    margin-left: 70px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 180px;
+    margin-bottom: 50px;
+    color: #fff;
+}
+#img {
+    display: inline;
+    margin-top: 240px;
+    align-items: center;
+    margin-left: 50px;
+    margin-bottom: 220px;
+    height: 320px;
+}
+
+#img2 {
+    height: 340px;
+    width: 480px;
+    margin-left: 50px;
+}
+#margin {
+    margin-left: 50px;
+}
+p {
     display: flex;
+    margin-bottom: 0px;
+    font-family: sans-serif;
     margin-left: 80px;
-    margin-bottom: 60px;
-    font-size: 24px;
-    font-family: monospace;
-}
-p{
+    width: 320px;
     color: #fff;
 }
-li {
-    color: #fff;
-}
+
 #text {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-bottom: 150px;
-}
-
-.font-family {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    align-items: center;
-    width: 350px;
-    margin-left: 700px;
-}
-
-.aling {
-    align-items: center;
-    width: 350px;
-    margin-left: 40px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-
-#flex2 {
     display: flex;
-    justify-content: right;
-    margin-top: -545px;
+    margin-left: 10px;
+    text-align: left;
+    width: 480px;
 }
 
-div#flex2 {
-    margin-right: 40px;
+#text2 {
+    display: flex;
+    margin-left: 10px;
+    text-align: left;
+    width: 480px;
+    font-family: sans-serif;
+    color: #fff;
+}
+
+#display {
+    display: flex;
+    margin-top: 5px;
+    margin-bottom: 6px;
+    margin-left: 80px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #fff;
 }
 
 footer {
-    grid-area: footer;
-    background-color: #34495E ;
     color: #fff;
-}
-section.intro {
-    grid-area: intro;
-}
-section.info {
-    grid-area: info;
-}
-
-
-#titulo-servicio {
-    display: inline-block;
-    font-size: 80px;
-    align-items: center;
-    text-align: center;
-    margin-left: 240px;
-    margin-top: 120px;
-    margin-bottom: 5px;
-    padding-top: 80px;
-    padding-bottom: 80px;
-    -webkit-box-shadow: inset -1px 3px 8px 5px #1F87FF, 2px 5px 16px 0px #0B325E, 5px 5px 15px 5px rgba(0,0,0,0); 
-box-shadow: inset -1px 3px 8px 5px #1F87FF, 2px 5px 16px 0px #0B325E, 5px 5px 15px 5px rgba(0,0,0,0);
-}
-#copete-servicio {
-    font-size: 18px;
-    text-align: center;
-    margin-left: 240px;
-    margin-bottom: 100px;
-}
-#color-contacto {
-    color: #fff;
-}
-
-.maquetado {
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: center;
-    justify-content: flex-start;
-    height: 45px;
-    margin-right: 350px;
+    background-color: #1B2631;
+    padding-top: 90px;
 }
