--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,17 +1,19 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 header {
     margin-bottom: 80px;
-    background-color: aqua;
+    background-color: #1B2631;
 }
 body {
     background-color: #2E4053;
 }
-header {
-    background-color: #1B2631;
-}
+
 h1 {
-    display: flex;
     padding-top: 45px;
-    display: inline-block;
+    padding-left: 20px;
     color: #fff;
 }
 ul {
@@ -21,6 +23,12 @@ li {
     display: inline-block;
     list-style-type: none;
     margin: 0 20px;
+}
+.row {
+    margin-bottom: 0px;
+}
+.card {
+    margin-bottom: 160px;
 }
 
 h2 {
@@ -50,35 +58,49 @@ p {
     color: #fff;
 }
 
-.card {
-    display: inline-block;
+#content {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left: 83px;
-    width: 400px;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 0px;
+
 }
 
-#ancho {
-    margin-left: 100px;
+#margen {
+    margin-bottom: -150px;
+    margin-right: 0px;
+    padding: 0;
 }
-#left {
-    margin-left: 100px;
+
+.card {
+    margin-top: 200px;
 }
+
+h5 {
+    color: #fff;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    font-size: 6.25rem;
+    text-align: center;
+    align-items: center;
+    -webkit-box-shadow: 5px 5px 15px 5px #A2D9CE; 
+box-shadow: 5px 5px 15px 5px  #A2D9CE;
+}
+
+section {
+    margin-left: 50px;
+}
+
 .card-text {
     display: flexbox;
     color: #2E4053;
     text-align: left;
-    margin: 0;
 }
 
 .card-body {
     display: flexbox;
     color: #2E4053;
     text-align: left;
-    margin: 0;
+    
 }
 
 #text {
@@ -89,13 +111,13 @@ p {
 }
 
 #font {
-    display: flex;
     text-align: center;
     font-size: 100px;
 }
 
 #width {
     display: flex;
+    justify-content: center;
     margin-left: 230px;
     width: 800px;
     background-color: #AED6F1;
@@ -115,8 +137,15 @@ p {
     padding-bottom: 50px;
 }
 
+
 footer {
+    display: flex;
+    justify-content: center;
+    padding-bottom: -40px;
     color: #fff;
     background-color: #1B2631;
     padding-top: 90px;
+    display: flex;
+    margin-top: 180px;
 }
+
