--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -7,21 +7,6 @@ html,body{
     height: 100vh;
 }
 
-.grid {
-    display: grid;
-    grid-template-areas:
-    "t t t"
-    "img img img"
-    "img img img"
-    "footer footer footer"
-    ;
-     
-    grid-template-columns: auto auto auto auto;
-    grid-column-gap: 5px;
-    grid-row-gap: 100px;
-    width: 100%;
-    height: 100vh;
-}
 
 #titulo {
     grid-area: t;
@@ -142,9 +127,6 @@ p {
 } 
 
 @media (max-width: 670px) and (min-width: 300px) {
-    .header {
-        width: 640px;
-    }
     .display-3 {
         font-size: 4.38rem;
     }
@@ -158,10 +140,8 @@ p {
 }
 
 
-@media screen and (max-width: 300px) {
-    #margin-top {
-        margin-top: 1020px;
-    }
+@media screen and (max-width: 440px) {
+    
     .responsive {
             width: 100%;
     }
@@ -174,7 +154,21 @@ p {
     .responsive {
         width: 100%;
         padding-right: 15px;
+        padding-left: 15px;
 }  
+}
+
+@media (max-width: 550px) and (min-width: 300px) {
+    .titulo {
+        font-size: 3rem;
+        margin: 15px;
+    }
+    p {
+        margin-left: 0;
+    }
+    #margin-top {
+        margin-top: 100px;
+    }
 }
 
 /* le puse display:none-para a futuro cambiarlo */
@@ -192,6 +186,17 @@ p {
 
 }
 
+#imagen {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+div.container-fluid {
+    padding: 0 0;
+}
+
 #margen {
     margin-bottom: -150px;
     margin-right: 0px;
@@ -202,13 +207,17 @@ p {
     margin-top: 200px;
 }
 
+#responsive {
+
+}
+
 h3 {
     color: #fff;
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     flex-direction: column;
-    margin: 80px 100px;
     font-size: 6.25rem;
+    margin-bottom: 80px;
     text-align: center;
     align-items: center;
     -webkit-box-shadow: 5px 5px 15px 5px #A2D9CE; 
